--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Ramalan Hari Ini</title>
+  <title>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</title>
   <style>
     body { font-family: Arial, sans-serif; }
     .container {
