--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Ramalan Hari Ini</h2>
+    <h2>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</h2>
     <label for="tanggal">Masukkan Tanggal Lahir (TTBBTTTT):</label>
     <input type="text" id="tanggal" placeholder="Contoh: 19101992" required />
     <button onclick="tampilkanRamalan()">Tampilkan Ramalan</button>
