--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -5,46 +5,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</title>
   <style>
-    body { font-family: Arial, sans-serif; }
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      margin: 0;
+      padding: 0;
+      background: #f8f8f8;
+    }
     .container {
-      width: 80%;
-      margin: 40px auto;
-      padding: 20px;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      max-width: 600px;
+      margin: 0 auto;
+      padding: 15px;
     }
     input[type="text"], button {
       width: 100%;
       padding: 10px;
-      margin: 10px 0;
-      font-size: 16px;
+      margin: 8px 0;
+      font-size: 14px;
+      box-sizing: border-box;
     }
     button {
       background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 5px;
-      cursor: pointer;
     }
     button:hover {
-      background-color: #3e8e41;
+      background-color: #45a049;
     }
-    #hasil {
-      margin-top: 20px;
-      padding: 20px;
-      border: 1px solid #ddd;
-      border-radius: 10px;
+    .hasil {
+      background-color: white;
+      border-radius: 8px;
+      padding: 10px 15px;
+      margin-top: 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .hasil strong {
+      display: inline-block;
+      width: 100px;
+    }
+    @media screen and (max-width: 480px) {
+      .container {
+        padding: 10px;
+      }
+      .hasil strong {
+        width: auto;
+        display: block;
+        margin-top: 5px;
+      }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</h2>
+    <h3>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</h3>
     <label for="tanggal">Masukkan Tanggal Lahir (TTBBTTTT):</label>
-    <input type="text" id="tanggal" placeholder="Contoh: 19101992" required />
+    <input type="text" id="tanggal" placeholder="Contoh: 19101992" />
     <button onclick="tampilkanRamalan()">Tampilkan Ramalan</button>
-    <div id="hasil"></div>
+    <div id="listHasil"></div>
   </div>
 
   <script>
@@ -124,10 +142,10 @@ Jam Baik: 11.00-12.00`
 
     function tampilkanRamalan() {
       const input = document.getElementById("tanggal").value.trim();
-      const hasil = document.getElementById("hasil");
+      const listHasil = document.getElementById("listHasil");
 
       if (!/^\d{8}$/.test(input)) {
-        hasil.innerHTML = "Format salah. Gunakan TTBBTTTT, contoh: 19101992";
+        alert("Format salah. Gunakan TTBBTTTT, contoh: 19101992");
         return;
       }
 
@@ -137,7 +155,7 @@ Jam Baik: 11.00-12.00`
       const date = new Date(thn, bln, tgl);
 
       if (isNaN(date)) {
-        hasil.innerHTML = "Tanggal tidak valid.";
+        alert("Tanggal tidak valid.");
         return;
       }
 
@@ -159,18 +177,25 @@ Jam Baik: 11.00-12.00`
 
       const ramalan = ramalanData[zodiak] || "Ramalan tidak ditemukan untuk zodiak ini.";
 
-      hasil.innerHTML = `
-        <strong>Tanggal Lahir:</strong> ${tgl}-${bln + 1}-${thn}<br/>
-        <strong>Weton:</strong> ${weton}<br/>
-        <strong>Shio:</strong> ${shio}<br/>
-        <strong>Zodiak:</strong> ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}<br/><br/>
-        <strong>Ramalan Hari Ini:</strong><br/>${ramalan.replace(/\n/g, "<br/>")}
+      // Buat elemen hasil baru
+      const div = document.createElement("div");
+      div.className = "hasil";
+      div.innerHTML = `
+        <div><strong>Tanggal:</strong> ${tgl}-${bln + 1}-${thn}</div>
+        <div><strong>Weton:</strong> ${weton}</div>
+        <div><strong>Shio:</strong> ${shio}</div>
+        <div><strong>Zodiak:</strong> ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}</div>
+        <div style="margin-top: 10px;"><strong>Ramalan:</strong><br/>${ramalan.replace(/\n/g, "<br/>")}</div>
       `;
+
+      // Tambahkan di atas
+      listHasil.prepend(div);
 
       // SUARA
       const tts = new SpeechSynthesisUtterance(`Ramalan untuk zodiak ${zodiak}. ${ramalan.replace(/\n/g, ". ")}`);
       tts.lang = "id-ID";
       tts.rate = 1;
+      window.speechSynthesis.cancel(); // stop jika ada yang sedang dibaca
       window.speechSynthesis.speak(tts);
     }
   </script>
