--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -17,36 +17,18 @@
       margin: 0 auto;
       padding: 15px;
     }
-    h3 {
-      margin-bottom: 5px; /* Lebih rapat dari form */
-    }
-    label {
-      display: block;
-      margin-bottom: 5px;
-      font-weight: bold;
-    }
     input[type="text"], button {
-      font-size: 13px;
-      padding: 8px 10px;
+      width: 100%;
+      padding: 10px;
+      margin: 8px 0;
+      font-size: 14px;
       box-sizing: border-box;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-    }
-    input[type="text"] {
-      width: 250px; /* Lebih kecil */
-      margin-bottom: 10px;
-      display: block;
     }
     button {
-      width: auto;
-      padding: 8px 20px; /* Lebih kecil dan ringkas */
       background-color: #4CAF50;
       color: white;
       border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-      font-weight: bold;
+      border-radius: 5px;
     }
     button:hover {
       background-color: #45a049;
@@ -57,23 +39,12 @@
       padding: 10px 15px;
       margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      white-space: pre-wrap; /* agar newline tampil */
-      font-family: monospace; /* biar mirip hasil contoh */
-      font-size: 13px;
-      line-height: 1.4;
+      font-family: monospace;
+      white-space: pre-wrap;
     }
-    @media screen and (max-width: 480px) {
-      .container {
-        padding: 10px;
-      }
-      input[type="text"] {
-        width: 100%; /* responsive */
-      }
-      button {
-        width: 100%;
-        padding: 10px;
-        margin-top: 5px;
-      }
+    .ramalan {
+      font-family: sans-serif;
+      margin-top: 10px;
     }
   </style>
 </head>
@@ -119,46 +90,46 @@ Jam Baik: 11.00-12.00`,
 Keuangan: Berani ambil keputusan!
 Asmara: Beri perhatian, jangan acuh!
 Jam Baik: 14.00-15.00`,
-      gemini: `Peruntungan: Kesuksesan sudah dekat, atur langkah!
-Keuangan: Cari cara dapat hasil besar!
-Asmara: Bersikap hangat, sabar, dan positif!
-Jam Baik: 14.00-15.00`,
-      cancer: `Peruntungan: Jangan hanya berharap, ambil tindakan!
-Keuangan: Banyak bergerak, jangan berdiam diri!
-Asmara: Tetap tenang, hindari pertengkaran!
-Jam Baik: 11.00-12.00`,
-      leo: `Peruntungan: Kesuksesan terus meningkat, tetap waspada!
-Keuangan: Waspadai pemborosan!
-Asmara: Percayakan pada Dia, jangan percaya omongan orang!
-Jam Baik: 14.00-15.00`,
-      virgo: `Peruntungan: Berhati-hati dalam menyikapi perubahan!
-Keuangan: Pemasukan mengalir, tapi kebutuhan naik!
-Asmara: Pertahankan suasana baik, dengarkan dia!
-Jam Baik: 14.00-15.00`,
+      gemini: `Peruntungan: Jangan plin-plan, mantapkan langkah!
+Keuangan: Jangan boros untuk hal tidak penting.
+Asmara: Bersikaplah terbuka!
+Jam Baik: 10.00-11.00`,
+      cancer: `Peruntungan: Emosi jangan menguasai keputusan.
+Keuangan: Waspadai pengeluaran tak terduga.
+Asmara: Luangkan waktu untuk pasangan.
+Jam Baik: 09.00-10.00`,
+      leo: `Peruntungan: Ambil alih kendali hidupmu.
+Keuangan: Ada peluang investasi menarik.
+Asmara: Saling pengertian akan menguatkan.
+Jam Baik: 08.00-09.00`,
+      virgo: `Peruntungan: Rinci dan teliti akan jadi keunggulanmu.
+Keuangan: Periksa ulang rencana keuanganmu.
+Asmara: Jangan terlalu mengkritik pasangan.
+Jam Baik: 13.00-14.00`,
       libra: `Peruntungan: Jangan terburu-buru, pikir dengan teliti!
 Keuangan: Terima bantuan dengan tangan terbuka!
 Asmara: Jangan bicara terlalu tinggi di depannya!
 Jam Baik: 12.00-13.00`,
-      scorpio: `Peruntungan: Lanjutkan rencana yang tertunda, optimis!
-Keuangan: Fokus pada masa depan, jangan terobsesi masa lalu!
-Asmara: Berikan nasehat dengan lembut, jadilah sosok menyenangkan!
-Jam Baik: 13.00-14.00`,
-      sagittarius: `Peruntungan: Bangkit kembali, jangan terus pesimis!
-Keuangan: Manfaatkan peluang untuk bangkit!
-Asmara: Terima pandangannya dengan bijak, jangan negatif!
-Jam Baik: 09.00-10.00`,
-      capricorn: `Peruntungan: Jangan takabur, tetap waspada!
-Keuangan: Jangan biarkan orang lain untung dari kesalahanmu!
-Asmara: Hilangkan prasangka buruk, jangan tuduh tanpa bukti!
+      scorpio: `Peruntungan: Energi positif datang, manfaatkan!
+Keuangan: Saatnya menabung lebih banyak.
+Asmara: Ungkapkan isi hatimu!
 Jam Baik: 15.00-16.00`,
-      aquarius: `Peruntungan: Jalani dengan sewajarnya, jangan memaksakan diri!
-Keuangan: Pengeluaran masih dalam batas kewajaran!
-Asmara: Jangan mendramatisir hal biasa, hindari keributan!
+      sagittarius: `Peruntungan: Jangan sia-siakan kesempatan.
+Keuangan: Bijaklah dalam belanja.
+Asmara: Petualangan cinta menantimu.
+Jam Baik: 16.00-17.00`,
+      capricorn: `Peruntungan: Fokus pada targetmu.
+Keuangan: Usaha kerasmu mulai membuahkan hasil.
+Asmara: Jangan terlalu kaku.
+Jam Baik: 07.00-08.00`,
+      aquarius: `Peruntungan: Gunakan ide kreatifmu.
+Keuangan: Jangan spekulasi berlebihan.
+Asmara: Cinta butuh perhatian.
 Jam Baik: 17.00-18.00`,
-      pisces: `Peruntungan: Selesaikan tanggungan, jangan tunda!
-Keuangan: Kencangkan ikat pinggang, hemat!
-Asmara: Jangan percaya gosip, jangan ikut memojokkan!
-Jam Baik: 11.00-12.00`
+      pisces: `Peruntungan: Ikuti intuisi, tapi tetap realistis.
+Keuangan: Jangan tergoda belanja impulsif.
+Asmara: Saling percaya adalah kunci.
+Jam Baik: 18.00-19.00`,
     };
 
     function tampilkanRamalan() {
@@ -175,7 +146,7 @@ Jam Baik: 11.00-12.00`
       const thn = parseInt(input.substring(4, 8), 10);
       const date = new Date(thn, bln, tgl);
 
-      if (isNaN(date.getTime())) {
+      if (isNaN(date)) {
         alert("Tanggal tidak valid.");
         return;
       }
@@ -198,29 +169,23 @@ Jam Baik: 11.00-12.00`
 
       const ramalan = ramalanData[zodiak] || "Ramalan tidak ditemukan untuk zodiak ini.";
 
-      // Buat string hasil seperti contoh
-      const hasilTeks = 
-`Tanggal:  ${tgl}-${bln + 1}-${thn}
+      const teksHasil = `Tanggal:  ${tgl}-${bln + 1}-${thn}
 Weton:    ${weton}
 Shio:     ${shio}
-Zodiak:   ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}
+Zodiak:   ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}`;
 
-${ramalan}`;
-
-      // Buat elemen hasil baru
       const div = document.createElement("div");
       div.className = "hasil";
-      div.textContent = hasilTeks;
+      div.innerHTML = `<pre>${teksHasil}</pre><div class="ramalan">${ramalan.replace(/\n/g, "<br>")}</div>`;
 
-      // Tambahkan di atas
       listHasil.prepend(div);
 
-      // Text-to-Speech mulai dari tanggal
+      // TTS
       const tts = new SpeechSynthesisUtterance(`Tanggal: ${tgl}-${bln + 1}-${thn}. Weton: ${weton}. Shio: ${shio}. Zodiak: ${zodiak}. Ramalan: ${ramalan.replace(/\n/g, ". ")}`);
-      tts.lang = "id-ID";
-      tts.rate = 1;
-      window.speechSynthesis.cancel();
-      window.speechSynthesis.speak(tts);
+    tts.lang = "id-ID";
+    tts.rate = 1;
+    window.speechSynthesis.cancel();
+    window.speechSynthesis.speak(tts);
     }
   </script>
 </body>
