--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -6,7 +6,7 @@
   <title>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: Arial;
       font-size: 12px;
       margin: 0;
       padding: 0;
@@ -59,7 +59,7 @@
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
       white-space: pre-wrap; /* agar newline tampil */
       font-family: monospace; /* biar mirip hasil contoh */
-      font-size: 13px;
+      font-size: 10px;
       line-height: 1.4;
     }
     @media screen and (max-width: 480px) {
