--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -6,7 +6,7 @@
   <title>CEK WETON SHIO ZODIAK DAN RAMALAN HARI INI</title>
   <style>
     body {
-      font-family: Arial;
+      font-family: Arial, sans-serif;
       font-size: 12px;
       margin: 0;
       padding: 0;
@@ -18,7 +18,7 @@
       padding: 15px;
     }
     h3 {
-      margin-bottom: 5px; /* Lebih rapat dari form */
+      margin-bottom: 5px;
     }
     label {
       display: block;
@@ -33,13 +33,13 @@
       border: 1px solid #ccc;
     }
     input[type="text"] {
-      width: 250px; /* Lebih kecil */
+      width: 250px;
       margin-bottom: 10px;
       display: block;
     }
     button {
       width: auto;
-      padding: 8px 20px; /* Lebih kecil dan ringkas */
+      padding: 8px 20px;
       background-color: #4CAF50;
       color: white;
       border: none;
@@ -57,22 +57,32 @@
       padding: 10px 15px;
       margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      white-space: pre-wrap; /* agar newline tampil */
-      font-family: monospace; /* biar mirip hasil contoh */
-      font-size: 12px;
-      line-height: 1.4;
+      font-family: Arial, sans-serif;
+      font-size: 10px;
+    }
+    .baris {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-bottom: 5px;
+    }
+    .kolom {
+      width: 48%;
     }
     @media screen and (max-width: 480px) {
       .container {
         padding: 10px;
       }
       input[type="text"] {
-        width: 100%; /* responsive */
+        width: 100%;
       }
       button {
         width: 100%;
         padding: 10px;
         margin-top: 5px;
+      }
+      .kolom {
+        width: 100%;
       }
     }
   </style>
@@ -198,21 +208,20 @@ Jam Baik: 11.00-12.00`
 
       const ramalan = ramalanData[zodiak] || "Ramalan tidak ditemukan untuk zodiak ini.";
 
-      // Buat string hasil seperti contoh
-      const hasilTeks = 
-`Tanggal:  ${tgl}-${bln + 1}-${thn}
-Weton:    ${weton}
-Shio:     ${shio}
-Zodiak:   ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}
-
-${ramalan}`;
-
-      // Buat elemen hasil baru
       const div = document.createElement("div");
       div.className = "hasil";
-      div.textContent = hasilTeks;
+      div.innerHTML = `
+        <div class="baris">
+          <div class="kolom">Tanggal:  ${tgl}-${bln + 1}-${thn}</div>
+          <div class="kolom">Weton:    ${weton}</div>
+        </div>
+        <div class="baris">
+          <div class="kolom">Shio:     ${shio}</div>
+          <div class="kolom">Zodiak:   ${zodiak.charAt(0).toUpperCase() + zodiak.slice(1)}</div>
+        </div>
+        <div style="margin-top:10px; white-space: pre-wrap;">${ramalan}</div>
+      `;
 
-      // Tambahkan di atas
       listHasil.prepend(div);
 
       // Text-to-Speech mulai dari tanggal
