--- a/wetonshiozodiak.html
+++ b/wetonshiozodiak.html
@@ -20,6 +20,7 @@
     h3 {
       font-size: 16px;
       margin-bottom: 10px;
+      color: #d32f2f; /* merah elegan */
     }
     input[type="text"], button {
       width: 100%;
@@ -43,7 +44,7 @@
       padding: 10px 15px;
       margin-top: 15px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      font-size: 11px;
+      font-size: 12px;
       font-family: Arial, sans-serif;
     }
     .baris {
