--- a/cekkecocokan.html
+++ b/cekkecocokan.html
@@ -42,7 +42,7 @@
       margin-top: 15px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
-      animation: fadeIn 1s ease-in-out;
+      animation: fadeIn 0.5s ease-in-out;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: scale(0.95); }
@@ -52,6 +52,17 @@
       font-size: 30px;
       margin-bottom: 10px;
     }
+    @media screen and (max-width: 480px) {
+      h2 {
+        font-size: 18px;
+      }
+      input, button {
+        font-size: 12px;
+      }
+      .emoji {
+        font-size: 24px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -60,28 +71,28 @@
     <input type="text" id="nama1" placeholder="Nama Kamu" />
     <input type="text" id="nama2" placeholder="Nama Pasangan" />
     <button onclick="cekCinta()">Cek Kecocokan</button>
-    <div id="hasil" class="hasil"></div>
+    <div id="daftarHasil"></div>
   </div>
 
   <script>
+    const daftarHasil = document.getElementById("daftarHasil");
+
     function cekCinta() {
       const nama1 = document.getElementById("nama1").value.trim().toLowerCase();
       const nama2 = document.getElementById("nama2").value.trim().toLowerCase();
-      const hasil = document.getElementById("hasil");
 
       if (!nama1 || !nama2) {
-        hasil.innerHTML = "<p>Masukkan kedua nama terlebih dahulu!</p>";
+        alert("Masukkan kedua nama terlebih dahulu!");
         return;
       }
 
-      // Gabungkan nama dan hitung nilai unik dari karakter
       const combined = nama1 + nama2;
       let total = 0;
       for (let i = 0; i < combined.length; i++) {
         total += combined.charCodeAt(i);
       }
 
-      const persen = 50 + (total % 51); // hasil antara 50–100
+      const persen = 50 + (total % 51); // 50-100
 
       let pesan = "", emoji = "";
       if (persen >= 90) {
@@ -98,17 +109,30 @@
         emoji = "💔";
       }
 
-      hasil.innerHTML = `
+      const div = document.createElement("div");
+      div.className = "hasil";
+      div.innerHTML = `
         <div class="emoji">${emoji}</div>
         <h3>${persen}% Cocok!</h3>
+        <p>${nama1} & ${nama2}</p>
         <p>${pesan}</p>
       `;
 
+      // Tambahkan hasil di atas
+      daftarHasil.prepend(div);
+
+      // Batasi maksimal 3 hasil
+      if (daftarHasil.children.length > 3) {
+        daftarHasil.removeChild(daftarHasil.lastChild);
+      }
+
       // Suara
-      const ucap = new SpeechSynthesisUtterance(`Nama ${nama1} dan ${nama2}, tingkat kecocokan ${persen} persen. ${pesan}`);
-      ucap.lang = "id-ID";
-      speechSynthesis.cancel(); // Hentikan suara sebelumnya
-      speechSynthesis.speak(ucap);
+      const ucapan = new SpeechSynthesisUtterance(
+        `Nama ${nama1} dan ${nama2}, tingkat kecocokan ${persen} persen. ${pesan}`
+      );
+      ucapan.lang = "id-ID";
+      speechSynthesis.cancel();
+      speechSynthesis.speak(ucapan);
     }
   </script>
 </body>
