--- a/cekkecocokan.html
+++ b/cekkecocokan.html
@@ -3,70 +3,76 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Cek Kecocokan Cinta</title>
+  <title>CEK KECOCOKAN CINTA</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 30px;
-      background: linear-gradient(to right, #ff9a9e, #fad0c4);
+      font-size: 12px;
+      margin: 0;
+      padding: 0;
+      background: #f8f8f8;
     }
-
-    h1 {
-      color: #fff;
-      margin-bottom: 20px;
-    }
-
-    input {
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
       padding: 10px;
-      margin: 5px;
-      font-size: 16px;
-      width: 200px;
-      border: none;
-      border-radius: 10px;
     }
-
+    h3 {
+      font-size: 16px;
+      margin-bottom: 10px;
+      color: #d32f2f;
+      text-align: center;
+    }
+    input[type="text"], button {
+      width: 100%;
+      padding: 6px 8px;
+      margin: 6px 0;
+      font-size: 12px;
+      box-sizing: border-box;
+    }
     button {
-      padding: 10px 20px;
-      font-size: 16px;
-      margin-top: 10px;
-      cursor: pointer;
-      border: none;
-      background-color: #ff4d6d;
+      background-color: #e91e63;
       color: white;
-      border-radius: 10px;
+      border: none;
+      border-radius: 5px;
     }
-
+    button:hover {
+      background-color: #c2185b;
+    }
     .hasil {
-      margin-top: 20px;
-      padding: 15px;
       background-color: white;
-      border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      max-width: 300px;
-      margin-left: auto;
-      margin-right: auto;
+      border-radius: 8px;
+      padding: 10px 15px;
+      margin-top: 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      font-size: 12px;
+      text-align: center;
+      animation: fadeIn 0.4s ease-in-out;
     }
-
+    @keyframes fadeIn {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
     .emoji {
-      font-size: 32px;
+      font-size: 24px;
+      margin-bottom: 6px;
     }
-
-    small {
-      color: #555;
+    @media screen and (max-width: 480px) {
+      h3 { font-size: 14px; }
+      input, button { font-size: 11px; padding: 5px 6px; }
+      .hasil { font-size: 11px; }
+      .emoji { font-size: 20px; }
     }
   </style>
 </head>
 <body>
-  <h1>Cek Kecocokan Cinta 💘</h1>
-
-  <input type="text" id="nama1" placeholder="Nama Pertama" />
-  <br/>
-  <input type="text" id="nama2" placeholder="Nama Kedua" />
-  <br/>
-  <button onclick="cekCinta()">Cek Kecocokan</button>
-
-  <div id="daftarHasil"></div>
+  <div class="container">
+    <h3>CEK KECOCOKAN CINTA</h3>
+    <input type="text" id="nama1" placeholder="Nama Kamu" />
+    <input type="text" id="nama2" placeholder="Nama Pasangan" />
+    <button onclick="cekCinta()">Cek Kecocokan</button>
+    <div id="daftarHasil"></div>
+  </div>
 
   <script>
     function cekCinta() {
@@ -84,7 +90,7 @@
         total += combined.charCodeAt(i);
       }
 
-      const persen = 50 + (total % 51); // 50–100
+      const persen = 50 + (total % 51); // hasil antara 50–100
 
       let pesan = "", emoji = "";
 
@@ -135,10 +141,12 @@
 
       daftarHasil.prepend(div);
 
+      // Batasi maksimal 3 hasil ditampilkan
       if (daftarHasil.children.length > 3) {
         daftarHasil.removeChild(daftarHasil.lastChild);
       }
 
+      // Ucapan suara
       const ucapan = new SpeechSynthesisUtterance(
         `Nama ${nama1} dan ${nama2}, tingkat kecocokan ${persen} persen. ${pesan}`
       );
